# Trading_Bot01

./: .gitignore  CHANGELOG_DATA_SOURCES.md  COMPLETION_REPORT.txt  DASHBOARD_FIX.md  DATA_SOURCES_COMPLETE.md  DATA_SOURCES_CONFIGURATION.md  DATA_SOURCES_CONFIGURATION_SUMMARY.md  DATA_SOURCES_FINAL_SUMMARY.md  DATA_SOURCES_INDEX.md  DATA_SOURCES_INTEGRATION.md  DATA_SOURCES_QUICKSTART.md  DATA_SOURCES_QUICK_REFERENCE.md  DATA_SOURCES_README.md  DATA_SOURCES_SETUP.md  DATA_SOURCES_SETUP_SUMMARY.md  DATA_SOURCES_VISUAL_SUMMARY.md  DELIVERABLES.md  DYNAMIC_ADD_ITEM_GUIDE.md  FIX_SUMMARY.md  INDEX.md  PRODUCTION_READY.md  PRODUCTION_SETUP.md  PRODUCTION_SUMMARY.py  PRODUCTION_UPGRADE.md  PROJECT_COMPLETE.md  QUICKSTART.md  RAVENSHIRE_ARCHITECTURE.md  RAVENSHIRE_README.md  README.md  README_RAVENSHIRE.md  SETUP_AND_CONFIG.md  SETUP_COMPLETE.txt  START_HERE_DATA_SOURCES.md  SWISS_TRADING.md  VIDEO_ANALYSIS_IMPLEMENTATION.md  WATCHLIST_COMPLETE.md  WATCHLIST_DIRECTORY.md  WATCHLIST_GUIDE.md  WATCHLIST_STATUS.py  conftest.py  (+22 more)
.devcontainer/: devcontainer.json
config/: config.py  logging_config.py  trading_config.ini
dashboard/: app.py
database/: qsconnect.duckdb
database/cache/: .gitkeep
database/fmp/: .gitkeep
database/optuna/: .gitkeep
database/user/: .gitkeep
database/yahoo/: .gitkeep
orchestration/: __init__.py  prefect_flows.py
src/: __init__.py
src/agents/: __init__.py  analyst.py  base_agent.py  oracle.py  sentinel.py  strategist.py
src/analytics/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_btc_short.py  test_core.py  test_watchlist.py
(+42 files in other folders)
