[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Python-powered quantamental trading system with automated risk controls and P&L tracking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Trading Bot Team", email = "team@tradingbot.dev"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "sqlalchemy>=2.0.0",
    "pytz>=2023.3",
    "scipy>=1.11.0",
    "duckdb>=0.9.0",
    "optuna>=3.4.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pyarrow>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.15.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
broker = [
    "alpaca-trade-api>=3.1.0",
    "ccxt>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
